# lens

./: .gitignore  .golangci.yml  DEMO.md  Makefile  README.md  go.mod  go.sum
.github/workflows/: ci.yml
anomaly/: pyproject.toml
anomaly/src/anomaly/: detector.py  server.py
anomaly/tests/: test_detector.py
cmd/agent/: main.go
cmd/ingest/: main.go
cmd/query/: main.go
deploy/: docker-compose.yml
deploy/docker/: Dockerfile.agent  Dockerfile.ingest  Dockerfile.query
deploy/portfolio/: Dockerfile.raft  Dockerfile.vessel  agent-config.yml  docker-compose.yml  test-integration.ps1
docs/: limitations.md
docs/decisions/: 001-monorepo-layout.md  002-disk-backed-buffer.md  003-proc-parsing-strategy.md  004-ebpf-kernel-metrics.md  005-clickhouse-schema.md
docs/internals/: instrumentation.md
internal/agent/: agent.go
internal/agent/batcher/: batcher.go  batcher_test.go
internal/agent/buffer/: disk.go  disk_test.go  segment.go
internal/agent/config/: config.go  config_test.go
internal/agent/selfmon/: selfmon.go  selfmon_test.go
internal/agent/shipper/: shipper.go  shipper_test.go
internal/alert/: engine.go  engine_test.go  notifier.go
internal/common/model/: batch.go  log.go  metric.go  trace.go
internal/ingest/: server.go
internal/query/: server.go
scripts/: bpf-gen.sh  proto-gen.sh
tests/chaos/: kill_ingest_test.go
tests/integration/: pipeline_test.go
web/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx  api.ts  index.css  types.ts
(+61 files in other folders)
